cmake_minimum_required(VERSION 3.10)
project(cpp_beginners)

set(CMAKE_CXX_STANDARD 14)


add_executable(cpp_beginners main.cpp OutputtingText.cpp InputText.cpp exercise310.cpp exercise311.cpp drill4.cpp drill5.cpp calculator.cpp Variables.cpp Pointers.cpp PointersAndArrays.cpp PointerArightmetic.cpp CharArrays.cpp ReversingString.cpp Inheritance.cpp Encapsulation.cpp TwosComplement.cpp FibonacciPrint.cpp NameAge.cpp BirthdayProblem.cpp Chrono.cpp Chrono.h TestChrono.cpp Book.cpp Book.h TestLibrary.cpp Patron.cpp Patron.h ReadingTemperatures.cpp PointReader.cpp chapter11.cpp multi_input.cpp pund_dict.cpp HashFunction.cpp)